# PinAstar

./: AStarDecode.cpp  AStarDecode_CBC.cpp  AStarDecode_DM_I.cpp  AStarDecode_DM_II.cpp  AStarDecode_RSS.cpp  AStarDecode_RSS_OSC.cpp  AStarDecode_ReduceCOM.cpp  AWGN.cpp  CMakeLists.txt  DefineClass.cpp  FileOperation.cpp  LDPC_OPER.cpp  LinearBlockCodes.cpp  MatrixOperation.cpp  POLAR_OPER.cpp  PinAstar.sln  README.md  Source.cpp  TURBO_OPER.cpp
PinAstar/: 256_ControlLevel_Data.txt  ABP_AStarDecode.cpp  AStarDecode.h  AStarDecode_Adaptive.cpp  AStarDecode_DM_III.cpp  AStarDecode_RSS_II.cpp  AStarDecode_RSS_OSC_II.cpp  AStarDecode_repeatition.cpp  AWGN.h  AstarDecode_section_RSS.cpp  AstarDecode_segments.cpp  C16_8_concatenate.txt  C24_12_concatenate.txt  C6_5_concatenate.txt  Complete_Decoding_Statistic.txt  DefineClass.h  DefineParameter.h  Error_Count.txt  FileOperation.h  G6_5.txt  G8_4.txt  G_nonforzen.txt  GeneratorMatrix.txt  HM8_4.txt  HM8_4_concate_interleaver.txt  HM8_4_concatenate.txt  H_1024_768_z32_196.txt  H_1024_768_z64_196.txt  H_128_64.txt  H_192_96_z12_20200219_42.txt  H_256_128.txt  H_256_192.txt  H_512_256.txt  H_64x192_z8.txt  Hard_test.txt  LDPC16_8.txt  LDPC16_82.txt  LDPC_96_48.txt  LDPC_OPER.h  LLR.txt  (+53 more)
PinAstar/Debug/: vc141.idb
PinAstar/Debug/PinAstar.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PinAstar.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PinAstar/PinAstar/: PinAstar.sln  PinAstar.vcxproj
PinAstar/x64/Debug/: vc141.idb  (+3 more)
x64/Release/: Complete_Decoding_Statistic.txt  RealTime_Decoding_Statistic.txt
(+17 files in other folders)
